[tool.poetry]
name = "quantio"
version = "0.8.1"
description = "Type hinting and safe unit conversion for physical quantities in Python."
authors = []
readme = "README.md"
repository = "https://github.com/unexcellent/quantio"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
mypy-extensions = "<2.0"
ruff = "<1.0"

[tool.poetry.group.test.dependencies]
pytest = "<9.0"

[tool.ruff]
line-length = 101

[tool.ruff.lint]
exclude = ["test/*", "generate/*"]
select = ["ALL"]
ignore = [
    "COM812",  # conflicts with ruff formatter

    "D100",    # imo no docstrings are necessary in public modules
    "D107",    # __init__ docstrings are not necessary
    "D203",    # incompatible with D211
    "D213",    # incompatible with D212

    "ISC001",  # conflicts with ruff formatter

    "N802",    # interferes with setting constant abstract properties

    "PGH003",  # necessary for _QuantityBase.__eq__()

    "PLR0913", # many arguments are necessary for the quantities to enable enough different units

    "RUF012",  # does not work with constants

    "TCH001",  # adds hard to understand compexity without providing a benefit for smaller projects
    "TCH002",  # same as TCH001
    "TCH003",  # same as TCH001

    "SIM103",  # less readable in some cases imo

    "SLF001",  # necessary for vector operations
]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = ["call-arg"]

[tool.pytest.ini_options]
testpaths = ["test"]
xfail_strict = true